# cortex

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md
.claude/skills/cortex/: SKILL.md
.claude/skills/cortex-scan/: SKILL.md
.claude/skills/cortex-setup/: SKILL.md
cortex-cli/: .gitignore  pyproject.toml
cortex-cli/src/cortex/: atlas.py  config.py  git_ops.py  image.py  index.py  main.py  parser.py  paths.py  postprocess.py  render.py  store.py
cortex-cli/src/cortex/commands/: ask.py  atlas.py  backlinks.py  capture.py  commit.py  config_cmd.py  get.py  image.py  index_cmd.py  init.py  link.py  log.py  mv.py  neighbors.py  remote.py  reset.py  rm.py  search.py  stats.py  status.py  subgraph.py  update.py  write.py
cortex-cli/tests/: test_mv_rm.py
cortex-fe/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cortex-fe/legacy/: index.html
cortex-fe/src/: App.tsx  index.css
cortex-fe/src/components/atlas/: Atlas.tsx  AtlasContext.tsx  AtlasHeader.tsx  Breadcrumb.tsx  ConnectionsLayer.tsx  ControlPanel.tsx  EmptyState.tsx  LiveImage.tsx  NameGate.tsx  PopulatedAtlas.tsx  SceneView.tsx  SearchOverlay.tsx  TimeSlider.tsx  Zone.tsx  ZonesLayer.tsx
cortex-fe/src/components/atlas/landmarks/: BuildingLandmark.tsx
cortex-fe/src/components/atlas/ornaments/: Caravel.tsx  Cartouche.tsx  CompassRose.tsx  Graticule.tsx  InkBlots.tsx  Marginalia.tsx  RhumbLines.tsx  ScaleBar.tsx  SeaMonster.tsx
cortex-fe/src/components/atlas/scene/: HotspotsLayer.tsx  MarginaliaLayer.tsx  Markdown.tsx  ReadingMode.tsx  RelatedSection.tsx  RichText.tsx
cortex-fe/src/data/: atlas.json
cortex-fe/src/stores/: camera.ts  lens.ts  scenes.ts  time.ts  user.ts
cortex-fe/src/utils/: boundary.ts  camera.ts  placement.ts  relations.ts  searchIndex.ts
