[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-cli"
version = "0.1.0"
description = "Cortex — a knowledge-graph CLI over plain markdown, with an illustrated atlas front-end."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Emanuele Ielo", email = "emanueleielo@gmail.com" },
]
keywords = ["knowledge-graph", "memory", "markdown", "notes", "cli", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pyyaml>=6.0",
    "networkx>=3.0",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/emanueleielo/cortex"
Repository = "https://github.com/emanueleielo/cortex"
Issues = "https://github.com/emanueleielo/cortex/issues"

[project.scripts]
cortex = "cortex.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]
